--- a/.env.example
+++ b/.env.example
@@ -11,9 +11,9 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=evntoo_chat
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=chat
+DB_USERNAME=chat
+DB_PASSWORD=Pn_31go90
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
